[tool.poetry]
name = "nixopsenv"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/adisbladis/nixops.git", rev = "poetry2nix-plugins"}
nixopsaws = {git = "https://github.com/adisbladis/nixops-aws.git", rev = "poetry2nix-plugins"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
